@@ -3,9 +3,10 @@
             WanT code:  Log of Changes 
 =======================================================
 
+Oct 07 2010      conductor writes kdata also resolved wrt eigenchannels. (AF)
 
 Oct 06 2010      plot.x program updated to deal with kpt when plotting 
-                 eigenchannels. (AF)
+                 eigenchannels. Checks performed. (AF)
 
 Sep 29 2010      bug fixed in plot; bug fixed in hamiltonian_calc; qexml.f90
                  lib updated to take into account a bug fixed in QE. (AF)
